fix: bad site url

--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title:                    S.R.E Ci/Cd DevOps
 # email_title:            Email (Email title override)
 # phone:                  Your phone number (optional)
 # phone_title:            Phone (Phone title override)
-website:                  https://michaelmaffait.fr
+website:                  http://michaelmaffait.fr
 # website_title:          Resume
 
 # Dark Mode (true/false/never)
