docs(fix): end of devoteam

--- a/_config.yml
+++ b/_config.yml
@@ -99,7 +99,7 @@ content:
       - layout:           left
         title:            Devoteam
         sub_title:        Solution leader S.R.E Ci/Cd DevOps
-        caption:          April 2018 - present
+        caption:          April 2018 - November 2021
         # link:           Link to company (optional)
         quote:            >
           Devoteam is a major player in innovative technology and management consulting for companies. Our 7,600 professionals are committed to helping our clients win the digital battle.
